--- a/testing/html-css-js/index.html
+++ b/testing/html-css-js/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>AlgoStakeX Staking Platform Demo</title>
+    <title>DeFi Yield Farm - AlgoStakeX Powered</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <!-- for local testing-->
     <script defer src="../../dist/algostakex.js"></script>
     <!-- for live testing-->
@@ -15,21 +19,29 @@
     <script defer src="./index.js"></script>
   </head>
   <body>
+    <div class="background-gradient"></div>
     <header>
       <div class="container header-content">
         <div class="logo">
-          <img src="logo.png" alt="AlgoStakeX Logo" />
-          <h1>🎮 AlgoStakeX Staking Platform</h1>
+          <img src="logo.png" alt="DeFi Yield Farm Logo" />
+          <h1><i class="fas fa-coins"></i> DeFi Yield Farm</h1>
+          <span class="powered-by">Powered by AlgoStakeX</span>
         </div>
         <div id="profile-section" class="profile-section" style="display: none">
           <div class="wallet-info">
-            <span id="wallet-address"></span>
+            <div class="wallet-balance">
+              <span class="balance-label">Balance:</span>
+              <span id="wallet-balance">0 ALGO</span>
+            </div>
+            <div class="wallet-address-container">
+              <span id="wallet-address"></span>
+              <button id="copy-address" class="copy-btn" title="Copy Address">
+                <i class="fas fa-copy"></i>
+              </button>
+            </div>
           </div>
           <div class="profile-avatar">
-            <img
-              src="https://img.icons8.com/ios-filled/50/ffffff/user-male-circle.png"
-              alt="Profile"
-            />
+            <i class="fas fa-user-circle"></i>
           </div>
         </div>
       </div>
@@ -38,90 +50,178 @@
     <nav>
       <div class="container">
         <div class="nav-links">
-          <a href="index.html">Home</a>
-          <a href="profile.html">Profile</a>
-          <a href="about.html">About</a>
+          <a href="#home" class="nav-link active"><i class="fas fa-home"></i> Home</a>
+          <a href="#pools" class="nav-link"><i class="fas fa-swimming-pool"></i> Pools</a>
+          <a href="#analytics" class="nav-link"><i class="fas fa-chart-line"></i> Analytics</a>
+          <a href="#docs" class="nav-link"><i class="fas fa-book"></i> Docs</a>
         </div>
       </div>
     </nav>
 
     <main>
       <div class="container">
-        <h2 class="page-title">Staking Dashboard</h2>
+        <!-- Hero Section -->
+        <section class="hero-section">
+          <div class="hero-content">
+            <h1 class="hero-title">Maximize Your DeFi Yields</h1>
+            <p class="hero-subtitle">
+              Stake your tokens in our high-yield pools and earn competitive APY rewards with flexible terms
+            </p>
+            <div class="hero-stats">
+              <div class="hero-stat">
+                <div class="stat-value">$2.4M+</div>
+                <div class="stat-label">Total Value Locked</div>
+              </div>
+              <div class="hero-stat">
+                <div class="stat-value">15-25%</div>
+                <div class="stat-label">APY Range</div>
+              </div>
+              <div class="hero-stat">
+                <div class="stat-value">1,200+</div>
+                <div class="stat-label">Active Stakers</div>
+              </div>
+            </div>
+          </div>
+        </section>
 
         <!-- Wallet Connection Section -->
         <div id="wallet-connection-section" class="wallet-connection-section">
-          <h3>Connect Your Wallet</h3>
-          <p>
-            Connect your wallet to start staking and unlock premium features
-          </p>
-          <button class="btn btn-primary" id="connect-wallet-btn">
-            Connect Wallet
-          </button>
+          <div class="connection-card">
+            <div class="connection-icon">
+              <i class="fas fa-wallet"></i>
+            </div>
+            <h3>Connect Your Wallet</h3>
+            <p>
+              Connect your Algorand wallet to start earning high-yield DeFi rewards
+            </p>
+            <button class="btn btn-primary btn-large" id="connect-wallet-btn">
+              <i class="fas fa-link"></i>
+              Connect Wallet
+            </button>
+            <div class="supported-wallets">
+              <span>Supported:</span>
+              <div class="wallet-icons">
+                <img src="https://via.placeholder.com/24x24?text=P" alt="Pera" title="Pera Wallet">
+                <img src="https://via.placeholder.com/24x24?text=D" alt="Defly" title="Defly Wallet">
+              </div>
+            </div>
+          </div>
         </div>
 
-        <!-- Staking Info Section -->
+        <!-- Staking Dashboard Section -->
         <div id="staking-section" class="staking-section" style="display: none">
-          <div class="stats-grid">
-            <div class="stat-card">
-              <h3>Your Staked Amount</h3>
-              <p class="stat-value" id="staked-amount">0</p>
-              <p class="stat-label">tokens</p>
-            </div>
-            <div class="stat-card">
-              <h3>Reward Type</h3>
-              <p class="stat-value" id="reward-type">-</p>
-              <p class="stat-label" id="reward-info">-</p>
-            </div>
-            <div class="stat-card">
-              <h3>Status</h3>
-              <p class="stat-value" id="staking-status">Not Staking</p>
-              <p class="stat-label" id="staking-details">-</p>
+          <!-- Current Position Overview -->
+          <div class="position-overview">
+            <h2 class="section-title">Your Position</h2>
+            <div class="position-cards">
+              <div class="position-card">
+                <div class="card-header">
+                  <i class="fas fa-coins"></i>
+                  <span>Staked Amount</span>
+                </div>
+                <div class="card-value" id="staked-amount">0</div>
+                <div class="card-label">tokens</div>
+                <div class="card-change positive" id="staked-change">+0%</div>
+              </div>
+              <div class="position-card">
+                <div class="card-header">
+                  <i class="fas fa-percentage"></i>
+                  <span>Current APY</span>
+                </div>
+                <div class="card-value" id="current-apy">0%</div>
+                <div class="card-label">Annual Percentage Yield</div>
+                <div class="card-tier" id="current-tier">No Tier</div>
+              </div>
+              <div class="position-card">
+                <div class="card-header">
+                  <i class="fas fa-trophy"></i>
+                  <span>Earned Rewards</span>
+                </div>
+                <div class="card-value" id="earned-rewards">0</div>
+                <div class="card-label">tokens earned</div>
+                <div class="card-change positive" id="rewards-change">+0%</div>
+              </div>
+              <div class="position-card">
+                <div class="card-header">
+                  <i class="fas fa-clock"></i>
+                  <span>Time Staked</span>
+                </div>
+                <div class="card-value" id="time-staked">0d</div>
+                <div class="card-label">days active</div>
+                <div class="card-status" id="staking-status">Not Staking</div>
+              </div>
             </div>
           </div>
 
+          <!-- APY Tiers Section -->
+          <div class="tiers-section">
+            <h2 class="section-title">APY Tiers</h2>
+            <p class="section-subtitle">Higher stakes unlock better APY rates and exclusive benefits</p>
+            <div class="tiers-grid" id="tiers-grid">
+              <!-- Tiers will be populated by JavaScript -->
+            </div>
+          </div>
+
+          <!-- Actions Section -->
           <div class="actions-section">
-            <h3>Actions</h3>
+            <h2 class="section-title">Quick Actions</h2>
             <div class="action-buttons">
-              <button
-                class="btn btn-primary"
-                id="stake-btn"
-                onclick="openStakeModal()"
-              >
+              <button class="btn btn-primary btn-large" id="stake-btn" onclick="openStakeModal()">
+                <i class="fas fa-plus"></i>
                 Stake Tokens
               </button>
-              <button
-                class="btn btn-secondary"
-                id="withdraw-btn"
-                onclick="withdrawStake()"
-                id="withdraw-btn"
-                disabled
-              >
+              <button class="btn btn-secondary btn-large" id="withdraw-btn" onclick="withdrawStake()" disabled>
+                <i class="fas fa-minus"></i>
                 Withdraw
               </button>
-              <button
-                class="btn btn-warning"
-                id="emergency-withdraw-btn"
-                onclick="emergencyWithdrawStake()"
-                disabled
-              >
+              <button class="btn btn-warning btn-large" id="emergency-withdraw-btn" onclick="emergencyWithdrawStake()" disabled>
+                <i class="fas fa-exclamation-triangle"></i>
                 Emergency Withdraw
+              </button>
+              <button class="btn btn-outline btn-large" id="compound-btn" onclick="compoundRewards()" disabled>
+                <i class="fas fa-recycle"></i>
+                Compound Rewards
               </button>
             </div>
           </div>
 
-          <!-- Available Tokens Section -->
-          <div class="tokens-section">
-            <h3>Available Tokens in Wallet</h3>
-            <div id="tokens-list" class="tokens-list">
-              <p class="loading-text">Loading tokens...</p>
+          <!-- Portfolio Section -->
+          <div class="portfolio-section">
+            <h2 class="section-title">Portfolio Overview</h2>
+            <div class="portfolio-grid">
+              <div class="portfolio-card">
+                <h3>Available Tokens</h3>
+                <div id="tokens-list" class="tokens-list">
+                  <p class="loading-text">Loading tokens...</p>
+                </div>
+              </div>
+              <div class="portfolio-card">
+                <h3>Staking History</h3>
+                <div id="staking-history" class="staking-history">
+                  <div class="history-item">
+                    <div class="history-icon">
+                      <i class="fas fa-arrow-up"></i>
+                    </div>
+                    <div class="history-details">
+                      <div class="history-action">Initial Stake</div>
+                      <div class="history-time">2 days ago</div>
+                    </div>
+                    <div class="history-amount">+500 tokens</div>
+                  </div>
+                  <!-- More history items will be added by JavaScript -->
+                </div>
+              </div>
             </div>
           </div>
         </div>
 
         <div id="loading" class="loading-container" style="display: none">
-          <div class="loading-spinner"></div>
-          <p class="loading-text">Loading...</p>
+          <div class="loading-spinner">
+            <div class="spinner-ring"></div>
+            <div class="spinner-ring"></div>
+            <div class="spinner-ring"></div>
+          </div>
+          <p class="loading-text">Loading DeFi data...</p>
         </div>
       </div>
     </main>
@@ -129,45 +229,130 @@
     <!-- Stake Modal -->
     <div id="stake-modal" class="modal" style="display: none">
       <div class="modal-content">
-        <span class="close" onclick="closeStakeModal()">&times;</span>
-        <h3>Stake Tokens</h3>
-        <form id="stake-form">
-          <div class="form-group">
-            <label for="stake-amount">Amount</label>
-            <input
-              type="number"
-              id="stake-amount"
-              class="form-control"
-              required
-              min="1"
-              step="1"
-            />
-          </div>
-          <div class="form-group">
-            <label for="lock-period">Lock Period (minutes)</label>
-            <input
-              type="number"
-              id="lock-period"
-              class="form-control"
-              value="1440"
-              min="0"
-            />
-            <small>Leave 0 for flexible staking</small>
-          </div>
-          <button type="submit" class="btn btn-primary">Stake</button>
-        </form>
+        <div class="modal-header">
+          <h3><i class="fas fa-coins"></i> Stake Tokens</h3>
+          <span class="close" onclick="closeStakeModal()">&times;</span>
+        </div>
+        <div class="modal-body">
+          <form id="stake-form">
+            <div class="form-group">
+              <label for="stake-amount">Stake Amount</label>
+              <div class="input-group">
+                <input
+                  type="number"
+                  id="stake-amount"
+                  class="form-control"
+                  required
+                  min="100"
+                  step="1"
+                  placeholder="Enter amount to stake"
+                />
+                <span class="input-suffix">tokens</span>
+              </div>
+              <div class="amount-suggestions">
+                <button type="button" class="suggestion-btn" onclick="setSuggestedAmount(100)">100</button>
+                <button type="button" class="suggestion-btn" onclick="setSuggestedAmount(500)">500</button>
+                <button type="button" class="suggestion-btn" onclick="setSuggestedAmount(1000)">1K</button>
+                <button type="button" class="suggestion-btn" onclick="setSuggestedAmount(5000)">5K</button>
+              </div>
+            </div>
+            
+            <div class="tier-preview" id="tier-preview">
+              <div class="preview-header">
+                <i class="fas fa-info-circle"></i>
+                <span>Staking Preview</span>
+              </div>
+              <div class="preview-content">
+                <div class="preview-item">
+                  <span>Tier:</span>
+                  <span id="preview-tier">Bronze</span>
+                </div>
+                <div class="preview-item">
+                  <span>APY:</span>
+                  <span id="preview-apy">15%</span>
+                </div>
+                <div class="preview-item">
+                  <span>Est. Daily Rewards:</span>
+                  <span id="preview-daily">0.41 tokens</span>
+                </div>
+                <div class="preview-item">
+                  <span>Est. Monthly Rewards:</span>
+                  <span id="preview-monthly">12.5 tokens</span>
+                </div>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label for="lock-period">Lock Period</label>
+              <select id="lock-period" class="form-control">
+                <option value="0">Flexible (No Lock)</option>
+                <option value="1440">1 Day (+0.5% APY Bonus)</option>
+                <option value="10080">7 Days (+1% APY Bonus)</option>
+                <option value="43200">30 Days (+2% APY Bonus)</option>
+                <option value="129600">90 Days (+3% APY Bonus)</option>
+              </select>
+              <small>Longer lock periods earn higher APY bonuses</small>
+            </div>
+            
+            <div class="form-actions">
+              <button type="button" class="btn btn-secondary" onclick="closeStakeModal()">Cancel</button>
+              <button type="submit" class="btn btn-primary btn-large">
+                <i class="fas fa-lock"></i>
+                Stake Tokens
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
     </div>
 
     <footer>
       <div class="container footer-content">
-        <p>
-          &copy;
-          <script>
-            document.write(new Date().getFullYear());
-          </script>
-          AlgoStakeX Staking Platform. All rights reserved.
-        </p>
+        <div class="footer-section">
+          <div class="footer-logo">
+            <i class="fas fa-coins"></i>
+            <span>DeFi Yield Farm</span>
+          </div>
+          <p>Powered by AlgoStakeX - The premier DeFi staking platform on Algorand</p>
+        </div>
+        <div class="footer-section">
+          <h4>Platform</h4>
+          <ul>
+            <li><a href="#">Staking Pools</a></li>
+            <li><a href="#">Analytics</a></li>
+            <li><a href="#">Documentation</a></li>
+            <li><a href="#">API</a></li>
+          </ul>
+        </div>
+        <div class="footer-section">
+          <h4>Community</h4>
+          <ul>
+            <li><a href="#"><i class="fab fa-discord"></i> Discord</a></li>
+            <li><a href="#"><i class="fab fa-twitter"></i> Twitter</a></li>
+            <li><a href="#"><i class="fab fa-telegram"></i> Telegram</a></li>
+            <li><a href="#"><i class="fab fa-github"></i> GitHub</a></li>
+          </ul>
+        </div>
+        <div class="footer-section">
+          <h4>Security</h4>
+          <ul>
+            <li><a href="#">Audit Reports</a></li>
+            <li><a href="#">Bug Bounty</a></li>
+            <li><a href="#">Terms of Service</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <div class="container">
+          <p>
+            &copy;
+            <script>
+              document.write(new Date().getFullYear());
+            </script>
+            DeFi Yield Farm. All rights reserved. Built with AlgoStakeX SDK.
+          </p>
+        </div>
       </div>
     </footer>
   </body>
