--- a/testing/react/index.html
+++ b/testing/react/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/game-controller.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AlgoStakeX Game Platform</title>
+    <title>Solo Arena</title>
     <!-- Load AlgoStakeX SDK - Update with actual path after building -->
     <!-- For development: use local path after building SDK -->
     <!-- For production: use CDN or built file -->
