feat: connected demo apps with released sdk version

--- a/testing/html-css-js/index.html
+++ b/testing/html-css-js/index.html
@@ -15,14 +15,14 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
       rel="stylesheet"
     />
-    <!-- for local testing-->
     <script defer src="./env.js"></script>
-    <script defer src="../../dist/algostakex.js"></script>
+    <!-- for local testing-->
+    <!-- <script defer src="../../dist/algostakex.js"></script> -->
     <!-- for live testing-->
-    <!-- <script
+    <script
       defer
       src="https://cdn.jsdelivr.net/gh/IBHAGYESH/AlgoStakeX@v1.0.0/dist/algostakex.js"
-    ></script> -->
+    ></script>
     <script defer src="./index.js"></script>
   </head>
   <body>
