--- a/testing/react/index.html
+++ b/testing/react/index.html
@@ -5,17 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="/game-controller.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Solo Arena</title>
-    <!-- Load AlgoStakeX SDK - Update with actual path after building -->
-    <!-- For development: use local path after building SDK -->
-    <!-- For production: use CDN or built file -->
-    <script defer src="/algostakex.js"></script>
-    <script>
-      // Expose AlgoStakeX to window for useSDK hook
-      // This will be available after the SDK is built
-      if (typeof window !== "undefined" && window.AlgoStakeX) {
-        console.log("AlgoStakeX SDK loaded");
-      }
-    </script>
+    <!-- for local testing-->
+    <!-- <script defer src="../../dist/algomintx.js"></script> -->
+    <!-- for live testing-->
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/gh/IBHAGYESH/AlgoStakeX@v1.0.0/dist/algostakex.js"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
