fix: updated the sdk cdn url to always fetch the latest sdk version

--- a/testing/react/index.html
+++ b/testing/react/index.html
@@ -10,7 +10,7 @@
     <!-- for live testing-->
     <script
       defer
-      src="https://cdn.jsdelivr.net/gh/IBHAGYESH/AlgoStakeX@v1.0.0/dist/algostakex.js"
+      src="https://cdn.jsdelivr.net/gh/IBHAGYESH/AlgoStakeX@latest/dist/algostakex.js"
     ></script>
   </head>
   <body>
