--- a/testing/html-css-js/index.html
+++ b/testing/html-css-js/index.html
@@ -21,7 +21,7 @@
     <!-- for live testing-->
     <script
       defer
-      src="https://cdn.jsdelivr.net/gh/IBHAGYESH/AlgoStakeX@v1.0.0/dist/algostakex.js"
+      src="https://cdn.jsdelivr.net/gh/IBHAGYESH/AlgoStakeX@latest/dist/algostakex.js"
     ></script>
     <script defer src="./index.js"></script>
   </head>
