--- a/testing/react/index.html
+++ b/testing/react/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/game-controller.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Solo Arena</title>
-    <!-- for local testing-->
-    <!-- <script defer src="../../dist/algomintx.js"></script> -->
+    <!-- for local testing (add algostakex.js in the public directory) -->
+    <!-- <script defer src="./algostakex.js"></script> -->
     <!-- for live testing-->
     <script
       defer
